--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="container">
         <header class="image_and_svg">
-          <img src="img/hero-image-business-card.png" alt="" />
-          <img class="layout" src="img/white-overlay.svg" alt="" />
+          <img src="hero-image-business-card.png" alt="" />
+          <img class="layout" src="white-overlay.svg" alt="" />
         </header>
         <article class="title_and_article">
           <h1>Perfect solution for small business</h1>
@@ -23,7 +23,7 @@
         <footer>
           <img
             class="avatar_picture"
-            src="img/avatar-image-business-card.png"
+            src="avatar-image-business-card.png"
           />
           <div class="avatar_info">
             <h2>Amy Burgess</h2>
